[package]
name = "june-http"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5"
concat-string = "1.0"
httparse = "1.8"
httpdate = "1.0"
matchit = "0.7"
may = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-querystring = "0.2"
ahash = { version = "0.8", features = ["serde"] }
strum = { version = "0.25.0", features = ["derive"] }
anyhow = "1.0.75"
const_format = "0.2.32"
indexmap = "2.1.0"
flate2 = "1.0.28"
weezl = "0.1.7"
http = "1.0.0"
thiserror = "1.0.50"
